objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>Department_ID__c</fullName>
        <displayFormat>UNV-{00000}</displayFormat>
        <label>Department ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_ID__c</fullName>
        <displayFormat>UNV-{00000}</displayFormat>
        <label>Manager ID</label>
        <type>AutoNumber</type>
    </fields>
    <label>Department</label>
    <nameField>
        <label>Department  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>